--- a/packages/figma-source-plugin/src/ui/App.css
+++ b/packages/figma-source-plugin/src/ui/App.css
@@ -80,8 +80,8 @@ svg {
 
 main {
   align-items: center;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   justify-content: center;
 }
 
@@ -99,7 +99,11 @@ footer > * + * {
   margin-left: 0.5rem;
 }
 
+header {
+  height: 140px;
+}
+
 img {
-  height: auto;
-  width: 2rem;
+  height: 140px;
+  width: 300px;
 }
