--- a/packages/figma-source-plugin/src/ui/App.css
+++ b/packages/figma-source-plugin/src/ui/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --color-bg: var(--figma-color-bg);
   --color-bg-hover: var(--figma-color-bg-hover);
   --color-bg-active: var(--figma-color-bg-pressed);
@@ -12,7 +12,7 @@
   --color-border-brand: var(--figma-color-border-brand);
   --color-border-brand-focus: var(--figma-color-border-selected-strong);
   --color-text-brand: var(--figma-color-text-onbrand);
-}
+} */
 
 html,
 body,
@@ -23,9 +23,8 @@ main {
 body,
 input,
 button {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', 'Helvetica Neue', sans-serif, 'Avenir Next';
+  font-size: 12px;
   text-align: center;
 }
 
@@ -36,33 +35,38 @@ body {
 }
 
 button {
-  border-radius: 0.25rem;
-  background: var(--color-bg);
-  color: var(--color-text);
+  border-radius: 8px;
+  background-color: rgba(27, 0, 251, 1);
+  font-size: 14px;
+  color: white;
   cursor: pointer;
-  border: 1px solid var(--color-border);
-  padding: 0.5rem 1rem;
+  padding: 4px 16px;
+  margin-top: 16px;
 }
 button:hover {
-  background-color: var(--color-bg-hover);
+  background-color: rgba(9, 18, 197, 1);
 }
 button:active {
-  background-color: var(--color-bg-active);
+  background-color: rgba(9, 18, 197, 1);
 }
-button:focus-visible {
+button:disabled {
+  background-color: rgba(151, 154, 155, 1);
+}
+
+/* button:focus-visible {
   border: none;
   outline-color: var(--color-border-focus);
-}
-button.brand {
+} */
+/* button.brand {
   --color-bg: var(--color-bg-brand);
   --color-text: var(--color-text-brand);
   --color-bg-hover: var(--color-bg-brand-hover);
   --color-bg-active: var(--color-bg-brand-active);
   --color-border: transparent;
   --color-border-focus: var(--color-border-brand-focus);
-}
+} */
 
-input {
+/* input {
   background: 1px solid var(--color-bg);
   border: 1px solid var(--color-border);
   color: 1px solid var(--color-text);
@@ -76,6 +80,22 @@ input:focus-visible {
 
 svg {
   stroke: var(--color-icon, rgba(0, 0, 0, 0.9));
+} */
+
+#selectionSection {
+  background-color: rgba(245, 246, 247, 1);
+  width: 100%;
+  height: 56px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border-radius: 8px;
+}
+#selectionSection p.disabled {
+  opacity: 0.3 
+}
+#selectionSection strong {
+color:rgba(27, 0, 251, 1)
 }
 
 main {
@@ -90,14 +110,11 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin: 16px 24px;
 }
-section > * + * {
+/* section > * + * {
   margin-top: 0.5rem;
-}
-footer > * + * {
-  margin-left: 0.5rem;
-}
+} */
 
 header {
   height: 140px;
